<?xml version="1.0"?>
<package format="2">
  <name>sensr_msgs</name>
  <version>0.0.1</version>
  <description>The sensr_msgs package</description>

  <maintainer email="dongmin.kim@seoulrobotics.org">DK</maintainer>

  <license>BSD</license>

  <url type="website">https://www.seoulrobotics.org/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
